# ImageProcessor

./: AbstractFilter.h  CMakeLists.txt  ChannelWiseFilter.cpp  ChannelWiseFilter.h  CompositeFilter.cpp  CompositeFilter.h  ConvFilter.cpp  ConvFilter.h  CropFilter.cpp  CropFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayScaleFilter.cpp  GrayScaleFilter.h  Image.cpp  Image.h  NegativeFilter.cpp  NegativeFilter.h  ParseAndHelp.h  Pixelate.cpp  Pixelate.h  SharpeningFilter.cpp  SharpeningFilter.h  ThresholdFilter.cpp  ThresholdFilter.h  image_processor.cpp  readme.md  test.cpp
